infra/main-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: main-app-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-app-deployment
  namespace: main-app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      serviceAccountName: main-app-ksa
      containers:
      - name: main-app
        image: ${REGION}-docker.pkg.dev/${PROJECT_NAME}/agent-sandbox-repo/main-app:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: main-app-svc
  namespace: main-app-ns
spec:
  type: LoadBalancer
  selector:
    app: main-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
